--- a/q/274532.html
+++ b/q/274532.html
@@ -26,10 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>105</td><td>Vyxal</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
+<tr d-ix="0"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
+<tr d-ix="1"><td>071</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
+<tr d-ix="2"><td>105</td><td>Vyxal</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
+<tr d-ix="3"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 84 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 10.5 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<pre><code>2 1*1(|+\|*)/+-\(1-)\!-:
+</code></pre>
+<p><a href="https://ngn.codeberg.page/k#eJxLszJSMNQy1KjRjqnR0tTX1o3RMNTVjFHUteLiSlMwAGJDIDYCYmMgNgFiUyA2A2JzAHt0DBU=" rel="nofollow noreferrer">Try it online!</a></p>
+<p>Input <code>n</code>. Return the <span class="math-container">\$n\$</span>th term as an integer pair.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ p=q=1
+ for i in range(n,0,-1):q*=2*i+1;p=p*i+q
+ return 2*p,q
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=RY4xDsIwDEX3nMJjUlKpyYSKssIlWCpoIEMdx00HzsLSBe7EbWhpK7x82dZ__z_f9Mj3iOP4GrIv95_TtfXgJapaALnkjAAfGQIEBG7w1krUlS6NqlPhbBF25kCOJk0CuM0DI9iCdFpxZ8-xA8_NJYeIPYSOImc4rgcxs_HPttWcOw1pSOB-RZadA2a52eT8VmrJ2Kp_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Outputs the (0-indexed) nth term of the sequence.</p>
+<p>Numerator and denominator are stored separately, with <code>p</code> being the numerator and <code>q</code> being the denominator.</p>
+<p>For n=3:</p>
+<pre><code>  * 3/7     + 1      * 2/5       + 1       * 1/3        + 1         * 2
+1 ----&gt; 3/7 --&gt; 10/7 ----&gt; 20/35 --&gt; 55/35 ----&gt; 55/105 --&gt; 160/105 --&gt; 320/105
+</code></pre>
+<p>The fraction being multiplied on each iteration is <code>i/(2 * i + 1)</code> (i = n, ..., 3, 2, 1). Adding 1 is the same as adding the denominator to the numerator. The multiplying-adding steps are combined for the numerator. The denominator is modified first, since the numerator depends on its new value when adding 1.</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 84 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 10.5 bytes</h1>
 <pre><code>ɾṘ:d›/ƒ≬$›*›d
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiyb7huZg6ZOKAui/GkuKJrCTigLoq4oC6ZCIsIiIsIjciXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -37,8 +60,20 @@
 <pre><code>001001000001000101011111001101000011001100111110110100000111001001000110001111000110
 </code></pre>
 <p>Feels like there's a better way to do the folding.</p>
+<h2>Explained</h2>
+<pre><code>ɾṘ:d›/ƒ≬$›*›d­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏‏​⁡⁠⁡‌­
+ɾṘ             # ‎⁡The range [7, 1]
+  :d›/         # ‎⁢n / (2n + 1) for each
+      ƒ≬       # ‎⁣Reduce by function f(x, y):
+        $      # ‎⁤  Make the argument order y, x instead of x, y
+         ›     # ‎⁢⁡  y + 1
+          *    # ‎⁢⁢  * x
+           ›d  # ‎⁢⁣2 * (^ + 1)
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 49 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 49 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{$!=$_;2*(1.FatRat,{1+$_*$!--/(2*$!+3)}...*)[$_]}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fY9NCsIwEEb3PcW0DpK0NlpFEGJcegC3YkPAdCOt0B9pCV14Djdd6KG8jTHq1tV8DLz3zdzupTo1w_OadzDOhDcCk3eoRMK2qt6pmr9zhCokKKOETsk8tGFBs3MJpb7ostKQouR2rfp_dFrEKB1P0EVre0tSLD7wo6mzePVMDPrCCcnPMjHWIUP049j1-7a_Z4yFdI_y8APX3HO-5QyMB2D_wRYEZPZwyu2iUh0EKEFswGDLiuaoeyDY0oB7X8cwfOYL" rel="nofollow noreferrer">Attempt This Online!</a></p>
