--- a/q/274532.html
+++ b/q/274532.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>045</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
+<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
 <tr d-ix="1"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="2"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 <tr d-ix="3"><td>071</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
 <tr d-ix="4"><td>105</td><td>Vyxal</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
 <tr d-ix="5"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 45 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>f=(n,q=1,p=1)=&gt;n?f(n-1,q*=n-~n,p*n+q):[p*2,q]
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>f=(n,p=q=1)=&gt;n?f(n-1,p*n+(q*=n-~n)):[p*2,q]
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN3XTbDXydAptDXUKbA01be3y7NM08nQNdQq1bPN06_J0CrTytAs1raILtIx0CmOhmpTS8os0Mm0NrDNtjAystbUzNZPz84rzc1L1cvLTNdI0MjU1ISph1gAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN7XTbDXydApsC20NNW3t8uzTNPJ0DXUKtPK0NQq1bPN06_I0Na2iC7SMdApjoVqU0vKLNDJtDawzbYwMrLW1MzWT8_OK83NS9XLy0zXSNDI1NSEqYZYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of shape warrior t's answer</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
