--- a/q/274532.html
+++ b/q/274532.html
@@ -26,20 +26,41 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
-<tr d-ix="1"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
-<tr d-ix="2"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
-<tr d-ix="3"><td>071</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
-<tr d-ix="4"><td>105</td><td>Vyxal</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
+<tr d-ix="0"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
+<tr d-ix="1"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
+<tr d-ix="2"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
+<tr d-ix="3"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
+<tr d-ix="4"><td>071</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
 <tr d-ix="5"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 51 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.375 bytes</h1>
+<pre><code>ƛƛd›/;Πd
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzPSIsIiIsIsabxptk4oC6LzvOoGQiLCIiLCI3Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>000001100001010101101101100001101101001010101111101
+</code></pre>
+<p>Ports the expanded formula from Bubbler's J answer.</p>
+<h2>Explained</h2>
+<pre><code>ƛƛd›/;Πd­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁣​‎⁪⁪⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁣​‎‏​⁢⁠⁡‌­
+ƛ         # ‎⁡Over each n in the range [1, in]:
+ ƛ   ;    # ‎⁢  Over each m in the range [1, n]:
+    /     # ‎⁣    m divided by
+  d›      # ‎⁤    2m + 1
+      Π   # ‎⁢⁡  Product of each fraction
+       d  # ‎⁢⁢  Doubled
+# ‎⁢⁣Summed by the s flag
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=(n,p=q=1)=&gt;n?f(n-1,p*n+(q*=n-~n)):[p*2,q]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN7XTbDXydApsC20NNW3t8uzTNPJ0DXUKtPK0NQq1bPN06_I0Na2iC7SMdApjoVqU0vKLNDJtDawzbYwMrLW1MzWT8_OK83NS9XLy0zXSNDI1NSEqYZYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of shape warrior t's answer</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
 <pre><code>2#.~1%2+1%]-i.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FuJT0FdYU0BVsrIKWjYKBgBcS6egrOQT5uS0tL0nQt1hkp69UZqhppG6rG6mbqQQS3aXKlJmfkq9kppAGxobZCpp6CkUEFRHLBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -60,13 +81,13 @@
 </code></pre>
 <p>So the numerator can be computed by evaluating <code>[0!, 1!, 2!, 3!, ...]</code> in mixed base <code>[1, 3, 5, 7, ...]</code>. Then the denominator can also be represented using <code>[1, 0, 0, 0, ...]</code>. Might be useful in languages without rational number support.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>2 1*1(|+\|*)/+-\(1-)\!-:
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLszJSMNQy1KjRjqnR0tTX1o3RMNTVjFHUteLiSlMwAGJDIDYCYmMgNgFiUyA2A2JzAHt0DBU=" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Input <code>n</code>. Return the <span class="math-container">\$n\$</span>th term as an integer pair.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>def f(n):
  p=q=1
  for i in range(n,0,-1):q*=2*i+1;p=p*i+q
@@ -80,27 +101,6 @@
 1 ----&gt; 3/7 --&gt; 10/7 ----&gt; 20/35 --&gt; 55/35 ----&gt; 55/105 --&gt; 160/105 --&gt; 320/105
 </code></pre>
 <p>The fraction being multiplied on each iteration is <code>i/(2 * i + 1)</code> (i = n, ..., 3, 2, 1). Adding 1 is the same as adding the denominator to the numerator. The multiplying-adding steps are combined for the numerator. The denominator is modified first, since the numerator depends on its new value when adding 1.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 84 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 10.5 bytes</h1>
-<pre><code>ɾṘ:d›/ƒ≬$›*›d
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiyb7huZg6ZOKAui/GkuKJrCTigLoq4oC6ZCIsIiIsIjciXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>001001000001000101011111001101000011001100111110110100000111001001000110001111000110
-</code></pre>
-<p>Feels like there's a better way to do the folding.</p>
-<h2>Explained</h2>
-<pre><code>ɾṘ:d›/ƒ≬$›*›d­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏‏​⁡⁠⁡‌­
-ɾṘ             # ‎⁡The range [7, 1]
-  :d›/         # ‎⁢n / (2n + 1) for each
-      ƒ≬       # ‎⁣Reduce by function f(x, y):
-        $      # ‎⁤  Make the argument order y, x instead of x, y
-         ›     # ‎⁢⁡  y + 1
-          *    # ‎⁢⁢  * x
-           ›d  # ‎⁢⁣2 * (^ + 1)
-💎
-</code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 49 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{$!=$_;2*(1.FatRat,{1+$_*$!--/(2*$!+3)}...*)[$_]}
