--- a/q/274532.html
+++ b/q/274532.html
@@ -26,14 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
-<tr d-ix="1"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
-<tr d-ix="2"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
-<tr d-ix="3"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
-<tr d-ix="4"><td>071</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
+<tr d-ix="0"><td>070</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
+<tr d-ix="1"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
+<tr d-ix="2"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
+<tr d-ix="3"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
+<tr d-ix="4"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 <tr d-ix="5"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 51 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.375 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>71</s> 70 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ p=q=1
+ for i in range(n,0,-1):q*=i-~i;p=p*i+q
+ return 2*p,q
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=RY4xEoIwEEX7nGLLBMMMUDk4aTmFDaNEt2CzWUJh40VsaPRO3kYRGLf7--e__x8vvqVroGl6jsnn-3dz7jx4TaZWwC66UoEPAghIIC1dOk22sHlp6pg5zO94YMcZ7qIC6dIoBFXGNq60o5fQg5f2lDDQANhzkATN-lAzmv7oqphrv8cWIrjfjkULUtJbTM-2MUvHtvwD" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Outputs the (0-indexed) nth term of the sequence as a (numerator, denominator) tuple.</p>
+<p>Numerator and denominator are stored separately, with <code>p</code> being the numerator and <code>q</code> being the denominator.</p>
+<p>For n=3:</p>
+<pre><code>  * 3/7     + 1      * 2/5       + 1       * 1/3        + 1         * 2
+1 ----&gt; 3/7 --&gt; 10/7 ----&gt; 20/35 --&gt; 55/35 ----&gt; 55/105 --&gt; 160/105 --&gt; 320/105
+</code></pre>
+<p>The fraction being multiplied on each iteration is <code>i/(2 * i + 1)</code> (i = n, ..., 3, 2, 1), with <code>2 * i + 1</code> written as <code>i - ~i</code> (thanks @l4m2 for that byte reduction). Adding 1 is the same as adding the denominator to the numerator. The multiplying-adding steps are combined for the numerator. The denominator is modified first, since the numerator depends on its new value when adding 1.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 51 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.375 bytes</h1>
 <pre><code>ƛƛd›/;Πd
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzPSIsIiIsIsabxptk4oC6LzvOoGQiLCIiLCI3Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -54,13 +69,13 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=(n,p=q=1)=&gt;n?f(n-1,p*n+(q*=n-~n)):[p*2,q]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN7XTbDXydApsC20NNW3t8uzTNPJ0DXUKtPK0NQq1bPN06_I0Na2iC7SMdApjoVqU0vKLNDJtDawzbYwMrLW1MzWT8_OK83NS9XLy0zXSNDI1NSEqYZYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of shape warrior t's answer</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
 <pre><code>2#.~1%2+1%]-i.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FuJT0FdYU0BVsrIKWjYKBgBcS6egrOQT5uS0tL0nQt1hkp69UZqhppG6rG6mbqQQS3aXKlJmfkq9kppAGxobZCpp6CkUEFRHLBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -81,26 +96,11 @@
 </code></pre>
 <p>So the numerator can be computed by evaluating <code>[0!, 1!, 2!, 3!, ...]</code> in mixed base <code>[1, 3, 5, 7, ...]</code>. Then the denominator can also be represented using <code>[1, 0, 0, 0, ...]</code>. Might be useful in languages without rational number support.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>2 1*1(|+\|*)/+-\(1-)\!-:
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLszJSMNQy1KjRjqnR0tTX1o3RMNTVjFHUteLiSlMwAGJDIDYCYmMgNgFiUyA2A2JzAHt0DBU=" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Input <code>n</code>. Return the <span class="math-container">\$n\$</span>th term as an integer pair.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 71 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>def f(n):
- p=q=1
- for i in range(n,0,-1):q*=2*i+1;p=p*i+q
- return 2*p,q
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=RY4xDsIwDEX3nMJjUlKpyYSKssIlWCpoIEMdx00HzsLSBe7EbWhpK7x82dZ__z_f9Mj3iOP4GrIv95_TtfXgJapaALnkjAAfGQIEBG7w1krUlS6NqlPhbBF25kCOJk0CuM0DI9iCdFpxZ8-xA8_NJYeIPYSOImc4rgcxs_HPttWcOw1pSOB-RZadA2a52eT8VmrJ2Kp_AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Outputs the (0-indexed) nth term of the sequence.</p>
-<p>Numerator and denominator are stored separately, with <code>p</code> being the numerator and <code>q</code> being the denominator.</p>
-<p>For n=3:</p>
-<pre><code>  * 3/7     + 1      * 2/5       + 1       * 1/3        + 1         * 2
-1 ----&gt; 3/7 --&gt; 10/7 ----&gt; 20/35 --&gt; 55/35 ----&gt; 55/105 --&gt; 160/105 --&gt; 320/105
-</code></pre>
-<p>The fraction being multiplied on each iteration is <code>i/(2 * i + 1)</code> (i = n, ..., 3, 2, 1). Adding 1 is the same as adding the denominator to the numerator. The multiplying-adding steps are combined for the numerator. The denominator is modified first, since the numerator depends on its new value when adding 1.</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 49 bytes</h1>
 <pre class="lang-perl prettyprint-override"><code>{$!=$_;2*(1.FatRat,{1+$_*$!--/(2*$!+3)}...*)[$_]}
