--- a/q/274532.html
+++ b/q/274532.html
@@ -26,14 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>070</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
-<tr d-ix="1"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
-<tr d-ix="2"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
-<tr d-ix="3"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
-<tr d-ix="4"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
-<tr d-ix="5"><td>049</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
+<tr d-ix="0"><td>043</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
+<tr d-ix="1"><td>070</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
+<tr d-ix="2"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
+<tr d-ix="3"><td>043</td><td>JavaScript Node.js</td><td>240729T010514Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274539#274539">l4m2</a></td></tr>
+<tr d-ix="4"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
+<tr d-ix="5"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>71</s> 70 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>49</s> 43 bytes</h1>
+<pre class="lang-perl prettyprint-override"><code>{2+2*[+] [\*] map {.FatRat/(2*$_+1)},1..$_}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=lZHBToQwEIbjlacY1smGtktdMCYmFQ4efACvCE0PcDGshmUNhO2TeOGgD6VP49Blo8lGE0_9M5nvm2bm9a0xj7vx8-y27mFZJd45DHWPJonknWnvTaumLNDwALWI2EUQcwqXrHpqoClfymZbQoFaUdnYv-hiE6J2fIAukm2SFLj5htFPnCs4ClYD4ZqjH4ZutE-jrZSSswx17phYxDwTOWQPPAcCJbnTVC6HWTF_OWL20P6jef17834f2VN9bZ7h1LtyQ-37rq3C6w_xf-RGeW4VV2sYPAA6BXaQQEU7Z4oKW9PDAjUkKa2ok9PJLATYsYXyZsc4Ht4v" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>71</s> 70 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>def f(n):
  p=q=1
  for i in range(n,0,-1):q*=i-~i;p=p*i+q
@@ -48,7 +53,7 @@
 </code></pre>
 <p>The fraction being multiplied on each iteration is <code>i/(2 * i + 1)</code> (i = n, ..., 3, 2, 1), with <code>2 * i + 1</code> written as <code>i - ~i</code> (thanks @l4m2 for that byte reduction). Adding 1 is the same as adding the denominator to the numerator. The multiplying-adding steps are combined for the numerator. The denominator is modified first, since the numerator depends on its new value when adding 1.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 51 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.375 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>s</code>, 51 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 6.375 bytes</h1>
 <pre><code>ƛƛd›/;Πd
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJzPSIsIiIsIsabxptk4oC6LzvOoGQiLCIiLCI3Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -69,13 +74,13 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 43 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=(n,p=q=1)=&gt;n?f(n-1,p*n+(q*=n-~n)):[p*2,q]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN7XTbDXydApsC20NNW3t8uzTNPJ0DXUKtPK0NQq1bPN06_I0Na2iC7SMdApjoVqU0vKLNDJtDawzbYwMrLW1MzWT8_OK83NS9XLy0zXSNDI1NSEqYZYAAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of shape warrior t's answer</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 14 bytes</h1>
 <pre><code>2#.~1%2+1%]-i.
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FuJT0FdYU0BVsrIKWjYKBgBcS6egrOQT5uS0tL0nQt1hkp69UZqhppG6rG6mbqQQS3aXKlJmfkq9kppAGxobZCpp6CkUEFRHLBAggNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -96,16 +101,11 @@
 </code></pre>
 <p>So the numerator can be computed by evaluating <code>[0!, 1!, 2!, 3!, ...]</code> in mixed base <code>[1, 3, 5, 7, ...]</code>. Then the denominator can also be represented using <code>[1, 0, 0, 0, ...]</code>. Might be useful in languages without rational number support.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 24 bytes</h1>
 <pre><code>2 1*1(|+\|*)/+-\(1-)\!-:
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLszJSMNQy1KjRjqnR0tTX1o3RMNTVjFHUteLiSlMwAGJDIDYCYmMgNgFiUyA2A2JzAHt0DBU=" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Input <code>n</code>. Return the <span class="math-container">\$n\$</span>th term as an integer pair.</p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, 49 bytes</h1>
-<pre class="lang-perl prettyprint-override"><code>{$!=$_;2*(1.FatRat,{1+$_*$!--/(2*$!+3)}...*)[$_]}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=fY9NCsIwEEb3PcW0DpK0NlpFEGJcegC3YkPAdCOt0B9pCV14Djdd6KG8jTHq1tV8DLz3zdzupTo1w_OadzDOhDcCk3eoRMK2qt6pmr9zhCokKKOETsk8tGFBs3MJpb7ostKQouR2rfp_dFrEKB1P0EVre0tSLD7wo6mzePVMDPrCCcnPMjHWIUP049j1-7a_Z4yFdI_y8APX3HO-5QyMB2D_wRYEZPZwyu2iUh0EKEFswGDLiuaoeyDY0oB7X8cwfOYL" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 
 <table id="st">
