--- a/q/103377.html
+++ b/q/103377.html
@@ -82,6 +82,9 @@
 <pre><code>(,&quot;:@#)^:3~
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8F6JT31NFsrdZ1aKwMFKwWDpaUlaboWqzV0lKwclDXjrIzrICJbNLlSkzPyFdIU1BNhQB0itWABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><code>(,&quot;:@#)</code> is a dyadic hook which takes strings on the left and right and gives the left string joined with the right string's length.</p>
+<p><code>^:3</code> means repeat 3 times.</p>
+<p><code>~</code> means use the same value for both the right and left arguments, so in the first iteration the string gets joined with its own length, then in the second iteration the original string gets joined with the length of that, etc.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 26 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 3.25 bytes</h1>
 <pre><code>3(LJ
