--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240729T030747Z
+"   /golfscore                                      20240729T031417Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/103105.html">Number of Straight-Chain Alk*nes of given length: 0103105</a>
+<a href="q/103377.html">Appending String Lengths                        : 0103377</a>
 <a href="q/128391.html">ASCII art for torrent UI                        : 0128391</a>
 <a href="q/103403.html">Print the f  f times table                      : 0103403</a>
 <a href="q/67255.html">Maximizing output from minimal input            : 0067255</a>
@@ -51,7 +53,6 @@
 <a href="q/125282.html">Goodbye Cruel World!                            : 0125282</a>
 <a href="q/274288.html">Compute Dickman                                 : 0274288</a>
 <a href="q/256034.html">Normal Subgroups of \$S_4\$                     : 0256034</a>
-<a href="q/103377.html">Appending String Lengths                        : 0103377</a>
 <a href="q/269725.html">How to optimize rectilinear borders             : 0269725</a>
 <a href="q/73091.html">Implement the divisibility-by-7 rule            : 0073091</a>
 <a href="q/133179.html">The redundant boolean                           : 0133179</a>
