--- a/q/274498.html
+++ b/q/274498.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>046</td><td>Arturo</td><td>240728T222239Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274529#274529">chunes</a></td></tr>
-<tr d-ix="1"><td>064</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
-<tr d-ix="2"><td>118</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
+<tr d-ix="0"><td>094</td><td>JavaScript Node.js</td><td>240728T201455Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274525#274525">Andrew B</a></td></tr>
+<tr d-ix="1"><td>046</td><td>Arturo</td><td>240728T222239Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274529#274529">chunes</a></td></tr>
+<tr d-ix="2"><td>064</td><td>JavaScript ES6</td><td>240728T134928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274507#274507">Arnauld</a></td></tr>
 <tr d-ix="3"><td>093</td><td>Google Sheets</td><td>240728T123106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274502#274502">doubleun</a></td></tr>
 <tr d-ix="4"><td>013</td><td>Jelly</td><td>240728T191734Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274524#274524">Jonathan</a></td></tr>
 <tr d-ix="5"><td>028</td><td>APL+WIN</td><td>240728T165935Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274517#274517">Graham</a></td></tr>
@@ -36,7 +36,16 @@
 <tr d-ix="7"><td>065</td><td>JavaScript Node.js</td><td>240728T122454Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274501#274501">l4m2</a></td></tr>
 <tr d-ix="8"><td>013</td><td>Vyxal</td><td>240728T120204Z</td><td><a href="https://codegolf.stackexchange.com/questions/274498/three-up-to-800-sum-to-2048/274499#274499">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 118 </s> 94 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>_=&gt;{k=s=&gt;(Math.random()*s|0)+1;c=801;while(c&gt;800){a=k(800);b=k(800);c=2048-a-b};return[a,b,c]}
+</code></pre>
+<p><a href="https://tio.run/##NcZBDsIgEADA7yxaGmo8kJDlB77AGLNQamspGEA91L4d48E5zZ1elG2aHoWH2Ls6YL2iXmfMqOFEZWwThT4uwHb5I9i@Uxal6NR7nLwDq6UQbCWc4Rdl/rF4EEfJiZtNJVeeKZypMY29bNXGkKN3rY83GICx@gU" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Go ahead and try this online - it works, and returns immediately. My first attempt at this challenge was to follow what others have done and pick 3 numbers at random between 1 and 800, and reject them if they don't sum to 2048 - but it takes forever - so I rejected that approach and tried another more feasible one.</p>
+<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</p>
+<p>I'm reasonably confident that this removes any bias.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[until[a:3|map=&gt;[800 1random]][2048=∑a]a]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?BxbM4y" rel="nofollow noreferrer">Try it!</a></p>
@@ -49,20 +58,11 @@ a:                   ; to a assign...
 a                    ; return a
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 64 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 64 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=(a=[q=2048,0,0].map(_=&gt;(q-=n=Math.random()*801|0,n)))=&gt;q?f():a
 </code></pre>
 <p><a href="https://tio.run/##FYtBTsMwEEX3nGKW48aOJohFRJn0BD1BVaGR40BKYjuJYdGWq2Pc1f9f7/2L/Mhm1zEm40Pvch4YhU8LP9NLq0nTuZ4l4jt3uBj2fJT0Wa/i@zCj2rXU3El7pRR3y2FA9Sp5CCtOLoEHBtqXeIPmkVWl4PYE8GBSWLH3ZdrgtzC5egofKBqkXl3/bR1i1GAVcAcRqtKK/Jv/QkxjOWRjtiT2y2zj1XFLRP8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 118 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>_=&gt;{k=s=&gt;Math.random()*s|0+1;c=801;while(c&gt;800){a=k(800);b=k(800);c=2048-a-b};return[0,[a,b,c],[a,c,b],[c,a,b]][k(3)]}
-</code></pre>
-<p><a href="https://tio.run/##NchBDoIwEEDR67RaSFEXJM1wA09AGjMdiiDQmhZ1gZy9wsLVf/kPfGOk0D/nzPnGphbSDaplgAjVFecuD@gaPzF@iF95LBRBKQv16frRMqpKKfmCMLAdyvxBcJKXMsPMrCrY@RVcLUWNwgjSe0mYrSS2o3U9sDPXayLvoh9tPvo7axnn6Qc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Go ahead and try this online - it works, and returns immediately. My first attempt at this challenge was to follow what others have done and pick 3 numbers at random between 1 and 800, and reject them if they don't sum to 2048 - but it takes forever - so I rejected that approach and tried another more feasible one.</p>
-<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</p>
-<p>I'm reasonably confident that this removes any bias.</p>
 </div>
 <div id="pu3" class="pu"><h1>Google Sheets, 93 bytes</h1>
 <pre><code>=let(f,lambda(f,let(n,map(X1:Z1,lambda(_,int(352*rand()+448))),if(2^11=sum(n),n,f(f)))),f(f))
