--- a/q/274498.html
+++ b/q/274498.html
@@ -42,8 +42,15 @@
 </code></pre>
 <p><a href="https://tio.run/##NcZBDsIgEADA7yxaGmo8kJDlB77AGLNQamspGEA91L4d48E5zZ1elG2aHoWH2Ls6YL2iXmfMqOFEZWwThT4uwHb5I9i@Uxal6NR7nLwDq6UQbCWc4Rdl/rF4EEfJiZtNJVeeKZypMY29bNXGkKN3rY83GICx@gU" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Go ahead and try this online - it works, and returns immediately. My first attempt at this challenge was to follow what others have done and pick 3 numbers at random between 1 and 800, and reject them if they don't sum to 2048 - but it takes forever - so I rejected that approach and tried another more feasible one.</p>
-<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</p>
-<p>I'm reasonably confident that this removes any bias.</p>
+<p>My algorithm is: pick 2 numbers between 1 and 800 - if the remainder is greater than 800 then pick again. <s> Since the 3rd number is &quot;more constrained&quot; than the other two, return one of 3 possibilities where this 3rd number appears in 1st, 2nd or 3rd place, again picked at random.</s></p>
+<p>I'm reasonably confident that <s>this removes any</s> there is no bias.</p>
+<p>EDIT:</p>
+<ol>
+<li><p>Thanks @xnor for pointing out a bug, which I have fixed: my function which returns numbers between 1 and n was returning numbers between 1 and n-1.</p>
+</li>
+<li><p>I have convinced myself that the last step of mixing the numbers is unnecessary, so I removed it.</p>
+</li>
+</ol>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 46 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$=&gt;[until[a:3|map=&gt;[800 1random]][2048=∑a]a]
