--- a/q/274532.html
+++ b/q/274532.html
@@ -38,7 +38,7 @@
 <p>It outputs denominator first.</p>
 <pre><code>{1 2×∊{⍺×+⍀⍵}⍥∊⌿1,i,⍨¨1+2×i←⍳⍵}
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCup5pbmpRYkl@UVAdkpqXn5uZh6Yp6mTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>71</s> <s>70</s> <s>60</s> 57 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda n,q=1,p=1:n and f(n-1,q:=q*2*n+q,p*n+q)or(2*p,q)
