--- a/q/274532.html
+++ b/q/274532.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>031</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
+<tr d-ix="0"><td>028</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
 <tr d-ix="1"><td>057</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
 <tr d-ix="2"><td>043</td><td>Raku Perl 6 rakudo</td><td>240729T001816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274533#274533">bb94</a></td></tr>
 <tr d-ix="3"><td>6375</td><td>Vyxal s</td><td>240729T003234Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274534#274534">lyxal</a></td></tr>
@@ -34,11 +34,12 @@
 <tr d-ix="5"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="6"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>31 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>It outputs denominator first.</p>
-<pre><code>{1 2×∊{⍺×+⍀⍵}⍥∊⌿1,i,⍨¨1+2×i←⍳⍵}
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>31</strike> 28 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>It outputs the <span class="math-container">\$n\$</span>th term with the denominator comes before the numerator.</p>
+<pre><code>∊×∘(+⍀)⍥∊⌿∘((⊂⍳2),⍳,⍨¨1+2×⍳)
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=e9TRdXj6o44ZGtqPehs0H/UufdTR9ahnP0hE41FX06PezUaaOkASiFccWmGobQRU3btZEwA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCup5pbmpRYkl@UVAdkpqXn5uZh6Yp6mTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (31bytes)</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>71</s> <s>70</s> <s>60</s> 57 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda n,q=1,p=1:n and f(n-1,q:=q*2*n+q,p*n+q)or(2*p,q)
