--- a/q/274532.html
+++ b/q/274532.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>024</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
+<tr d-ix="0"><td>021</td><td>APLDyalog Unicode</td><td>240729T043716Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274543#274543">akamayu</a></td></tr>
 <tr d-ix="1"><td>038</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
 <tr d-ix="2"><td>027</td><td>Charcoal</td><td>240729T063814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274546#274546">Neil</a></td></tr>
 <tr d-ix="3"><td>057</td><td>Python</td><td>240729T004501Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274535#274535">shape wa</a></td></tr>
@@ -36,11 +36,12 @@
 <tr d-ix="7"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="8"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>31</strike> <strike>27</strike> 24 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>It outputs the <span class="math-container">\$n\$</span>th term with the denominator comes before the numerator. Assumes <code>⎕io←0</code>.</p>
-<pre><code>∊(×∘(+⍀)⍥∊⌿2@0,⍨¨1++⍨)∘⍳
+<div id="pu0" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>31</strike> <strike>27</strike><strike>24</strike> 21 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>It outputs the <span class="math-container">\$n\$</span>th term with the denominator comes before the numerator. Assumes <code>⎕io←0</code>. 24 -&gt; 21 bytes thanks to @att.</p>
+<pre><code>∊2(×∘(+⍀)⌿⊣@0,⍨¨1+×)⍳
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NSDgUdsEYyOuR31TM/OBTAMA&amp;c=e9TRpXF4@qOOGRraj3obNB/1Ln3U0fWoZ7@Rg4HOo94Vh1YYagMlVmgCVTzq3QwA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGUnVpckpmbWJKaolCQqa6p86h36qEVh1Zk6hxaoQG0A2hBx4xHPXsPrcgCyQFlsoAOSAcKpgEVAZmG2o96NxsaAwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NTP/UdsEAwA&amp;c=ASYA2f/iiIoyKMOX4oiYKCvijYAp4oy/4oqjQDAs4o2owqgxK8OXKeKNsw&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR39SCAqByYwOuR20TNR51NannqSuop6Tm5edm5iWW5BcBeXmlualFUHZqcUlmbmJJaopCQaa6ps6j3qmHVhxakalzaIUG0DqgXR0zHvXsPbQiCyQHlMkCGp4OFEwDKgIyDbUf9W42NAYA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=e9Q3NSDgUdsEYyOuR31TM/OBTAMA&amp;c=e9TRpXF4@qOOGRraj3obNB/1Ln3U0fWoZ7@Rg4HOo94Vh1YYagMlVmgCVTzq3QwA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGUnVpckpmbWJKaolCQqa6p86h36qEVh1Zk6hxaoQG0A2hBx4xHPXsPrcgCyQFlsoAOSAcKpgEVAZmG2o96NxsaAwA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (24bytes)</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=e9Q3taDgUdsEYwMA&amp;c=e9TRpXF4@qOOGRraj3obNB/1Ln3U0fWoZ7/Go66mR72bjTR1gCQQrzi0wlDbCKiyd7MmAA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoxaPeqUCiY0Y6EKcdWpEJtMNA51HvZiMTAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (27bytes)</a></p>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=qzZUMDo8/VFHV/Wj3l2Hp2s/6m141Lu19lHvUqDYo579hjqZOo96VxxaYagNVJf5qG3Co97NIBUA&amp;f=S3/UNqH6Ue/Ww9sfdax41LMfyKxVeNQ7V6E4M7cgJzOtUiGtKDG5JDM/j@tR20SNR11N6nnqCuopqXn5uZl5iSX5RUBeXmluahGYramTqXNoRfqjjhlph1ZkAs020HnUu9nQFAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf! (31bytes)</a></p>
 </div>
