--- a/q/274556.html
+++ b/q/274556.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>192</td><td>JavaScript Node.js</td><td>240729T163719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274556/automatic-pikmin-count/274558#274558">l4m2</a></td></tr>
+<tr d-ix="0"><td>186</td><td>JavaScript Node.js</td><td>240729T163719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274556/automatic-pikmin-count/274558#274558">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 192 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 186 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>A=&gt;m=&gt;P=g=(n,i=8,...x)=&gt;i--?[...Array(m.includes(i)?A[i]+1:1)].map((_,j)=&gt;g(n--,i,j,...x))&amp;&amp;R:x.map((e,j)=&gt;i+=e*e*9+n*n*99+x.some((f,k)=&gt;y=e&lt;f?A[j]&lt;A[k]?0:A[j]-A[k]?1:9:0)*y)&amp;&amp;i&gt;=P?R:(P=i,R=x)
+<pre class="lang-javascript prettyprint-override"><code>A=&gt;m=&gt;P=g=(n,i=8,...x)=&gt;i--?[...Array(m.includes(i)?A[i]+1:1)].map((_,j)=&gt;g(n--,i,j,...x))&amp;&amp;R:x.map((e,j)=&gt;i+=e*e*9+n*n*99+x.some((f,k)=&gt;y=e&lt;f?(Q=A[j]-A[k])?Q&gt;0:9:0)*y)&amp;&amp;i&gt;=P?R:(P=i,R=x)
 </code></pre>
-<p><a href="https://tio.run/##pY3BaoQwEIbvfYo9LRONIakrrWGj@AbiVaTIbpS4Ghdtiz69TXRLobRloYdMvmHm@6cp38vxNKjrq6f7s1wqsSQi6kSUilqAxko8Y0LIhESkPC/ODSfDUM7QEaVP7dtZjqBQnOSqcBlnqCBdeQV4wY0xatCehxVutgi032d82hbkuqBcIR3phK52tBOG7kTGvpMAFb6Y6SzksTLRTXFM8ksRU27ZW5nxkFPkzCZTRSKNMw6pUDgTE1pOvR77VpK2r6GC/EDx7hDgnW/@x8AURunWrVwgyC2YoUFGEXr4FmD92/shw/pWNu0vvn9bZVb@dIP1pMGv@9b3n/72/X/69@jLBw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##pY3RaoQwEEXf@xX7tEw0hlhXWqWj@Aeur0GKuFHialy0Lfr1Nq5bCqUthT7MzB3mnjtN8VaM5aAuL47uT3KpcEkw6jBKsUbQVOEjZYxNBCPlOLEwOhmGYoaOKV22ryc5giJxIlRuu6FLctYVF4Bn2hiiBu04VNFmiyD7fRZOm0FeDcpGaUkrsLWlrSCwJzb2nQSo6NlcZ5RPVQxHTESTO4k45yQ@RjwMQk6s2aSpCNM4CyFFRTOcyFL2euxbydq@hgrEgdPdwac7z8x73zSX82276pyAWIU5GulyQu6@BKz8rb7JWPkVNusPvHezuiv8wfrXl0Z@/l957@F33vsn/xd8eQc" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Sightly timeout for large cases, n^3 it is</p>
 <p>Penalty Function:</p>
 <p><span class="math-container">$$ 792\left(N-\sum_i x_i\right)^2 + 9\sum_i x_i^2 + \sum_{x_i&lt;x_j}\left[0,9,1\right]_{\text{sgn}\left(A_i-A_j\right)-1}$$</span></p>
